# const-destructure

./: Cargo.toml  README.md  test.rs
compile_fail_tests/: struct_destructure.rs  struct_destructure.stderr  struct_duplicate_field copy.stderr  struct_duplicate_field.rs  struct_duplicate_field.stderr  struct_implements_drop.rs  struct_implements_drop.stderr  struct_refuse_ellipsis.rs  struct_refuse_ellipsis.stderr  struct_unbound_field.rs  struct_unbound_field.stderr  struct_unknown_field.rs  struct_unknown_field.stderr  tuple_arity_too_high.rs  tuple_arity_too_high.stderr  tuple_arity_too_low.rs  tuple_arity_too_low.stderr  tuple_arity_unimplemented.rs  tuple_arity_unimplemented.stderr  tuple_destructure.stderr
src/: lib.rs
tests/: compile_fail_tests.rs  pass.rs
